fix tab chevron color in dark mode

--- a/apps/frontend/src/styling/material.scss
+++ b/apps/frontend/src/styling/material.scss
@@ -297,4 +297,14 @@
             border-bottom: 1px solid var(--color-row-border);
         }
     }
+
+    .mat-tab-header-pagination-chevron {
+        border-color: var(--color-font);
+    }
+
+    .mat-tab-header-pagination-disabled {
+        .mat-tab-header-pagination-chevron {
+            border-color: var(--color-font-disabled);
+        }
+    }
 }
